nginx-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-svc # ingress 파일에서 넣어주어야 될 부분 service name
spec:
  type: NodePort
  selector:
    app: nginx-test # deployment file 안의 이름과 동일해야 한다. 
  ports:
  - name: http
    port: 80 # ingress 파일에서 넣어주어야 될 부분 service port
    protocol: TCP
    targetPort: 80
    nodePort: 30000
