nginx-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nginx # 매칭되는 네임스페이스
  name: ing-test
  annotations: # eks 에서 alb 사용해서 ingress 사용시 필요한 주석
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: test-nginx-svc # 서비스의 명칭과 매칭
              port:
                number: 80
